--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="background aligner">
     <app-header *ngIf="!loginRegister"></app-header>
-    <router-outlet></router-outlet>
+    <div class="aligner-item">
+        <router-outlet></router-outlet>
+    </div>
 </div>
