--- a/Front/src/app/body/register/register.component.html
+++ b/Front/src/app/body/register/register.component.html
@@ -1,1 +1,26 @@
-<p>register works!</p>
+<div class="login">
+    <div class="center">
+        <h1 class="title">REGISTER</h1>
+    </div>
+    <mat-form-field style.fontSize.px="15" class="form" appearance="standard" color="white">
+        <mat-label>Email</mat-label>
+        <input matInput autocomplete="on" name="email" required>
+    </mat-form-field>
+    <mat-form-field style.fontSize.px="15" class="form" appearance="standard" color="white">
+        <mat-label>Username</mat-label>
+        <input matInput autocomplete="on" name="username" required>
+    </mat-form-field>
+    <mat-form-field style.fontSize.px="15" class="form" appearance="standard" color="white">
+        <mat-label>Password</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" autocomplete="new-password" name="new-password" required>
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+    <div class="center">
+        <button mat-raised-button class="login-butt">Register</button>
+    </div>
+    <div class="to-register">
+        <span>Need to <a routerLink="/login"> log in</a></span>
+    </div>
+</div>
