--- a/Front/src/app/app.component.scss
+++ b/Front/src/app/app.component.scss
@@ -3,3 +3,11 @@
     width: 100vw;
     background-color: var(--background_color);
 }
+
+.body {
+    height: 100%;
+}
+
+.header {
+    position: absolute;
+}
