--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div class="background aligner">
-    <app-header *ngIf="!loginRegister"></app-header>
-    <div class="aligner-item">
-        <router-outlet></router-outlet>
+<div class="background ">
+    <app-header class="header" *ngIf="!loginRegister"></app-header>
+    <div class="aligner body">
+        <div class="aligner-item">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
