--- a/Front/src/app/body/file-list/file-list.component.html
+++ b/Front/src/app/body/file-list/file-list.component.html
@@ -1,1 +1,24 @@
-<p>file-list works!</p>
+<div class="file-comp">
+    <h1>{{'Welcome Back' + ' username'}}</h1>
+
+    <button class="up-butt" mat-raised-button>Upload something</button>
+
+    <div style="width: 100%;">
+        <h2>Your files</h2>
+
+        <mat-list class="list">
+            <ng-container *ngFor="let item of list; let i = index">
+                <mat-divider *ngIf="i !== 0"></mat-divider>
+                <mat-list-item>
+                    <div class="item">
+                        <span>Pepper</span>
+                        <div>
+                            <button mat-icon-button aria-label="Share" (click)="openSnackBar('test')"><mat-icon>send</mat-icon></button>
+                            <button mat-icon-button aria-label="Delete"><mat-icon>clear</mat-icon></button>
+                        </div>
+                    </div>
+                </mat-list-item>
+            </ng-container>
+        </mat-list>
+    </div>
+</div>
