--- a/Front/src/app/body/file-list/file-list.component.html
+++ b/Front/src/app/body/file-list/file-list.component.html
@@ -3,7 +3,7 @@
 
     <button class="up-butt" mat-raised-button>Upload something</button>
 
-    <div style="width: 100%;">
+    <div style="width: 100%;height: 80%;">
         <h2>Your files</h2>
 
         <mat-list class="list">
