--- a/Front/src/app/body/file-list/file-link/file-link.component.html
+++ b/Front/src/app/body/file-list/file-link/file-link.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <span class="title">File: </span>
+        <span class="title">File URL : </span>
         <span class="code">{{data.code}}</span>
     </div>
     <button mat-icon-button (click)="copy()">
