add admin and edit

--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -74,3 +74,7 @@ input:-webkit-autofill {
 .mat-form-field-appearance-standard .mat-form-field-flex {
     padding-top: 0px!important;
 }
+
+.mat-checkbox-frame {
+    border-color: white
+}
