--- a/Front/src/app/body/admin-panel/admin-panel.component.html
+++ b/Front/src/app/body/admin-panel/admin-panel.component.html
@@ -1,1 +1,22 @@
-<p>admin-panel works!</p>
+<div class="file-comp">
+    <h1>ADMIN Panel</h1>
+
+    <div style="width: 100%;height: 80%;">
+        <h2>Users</h2>
+
+        <mat-list class="list">
+            <ng-container *ngFor="let item of list; let i = index">
+                <mat-divider *ngIf="i !== 0"></mat-divider>
+                <mat-list-item>
+                    <div class="item">
+                        <span>Pepper</span>
+                        <div class="tool">
+                            <mat-checkbox matTooltip="Unadmin or Admin the user"></mat-checkbox>
+                            <button mat-icon-button matTooltip="Ban the user" aria-label="Delete"><mat-icon>clear</mat-icon></button>
+                        </div>
+                    </div>
+                </mat-list-item>
+            </ng-container>
+        </mat-list>
+    </div>
+</div>
