--- a/Front/src/app/body/file-list/file-list.component.html
+++ b/Front/src/app/body/file-list/file-list.component.html
@@ -1,7 +1,7 @@
 <div class="file-comp">
     <h1>{{'Welcome Back' + ' username'}}</h1>
 
-    <button class="up-butt" mat-raised-button>Upload something</button>
+    <button class="up-butt" mat-raised-button (click)="goTo('/add-file')">Upload something</button>
 
     <div style="width: 100%;height: 80%;">
         <h2>Your files</h2>
@@ -13,8 +13,8 @@
                     <div class="item">
                         <span>Pepper</span>
                         <div>
-                            <button mat-icon-button aria-label="Share" (click)="openSnackBar('test')"><mat-icon>send</mat-icon></button>
-                            <button mat-icon-button aria-label="Delete"><mat-icon>clear</mat-icon></button>
+                            <button mat-icon-button matTooltip="Share the url of the file" aria-label="Share" (click)="openSnackBar('test')"><mat-icon>send</mat-icon></button>
+                            <button mat-icon-button matTooltip="Delete the file" aria-label="Delete"><mat-icon>clear</mat-icon></button>
                         </div>
                     </div>
                 </mat-list-item>
