--- a/Front/src/app/header/header.component.html
+++ b/Front/src/app/header/header.component.html
@@ -1,4 +1,7 @@
 <div class="header">
+    <button *ngIf="!admin" mat-raised-button class="edit-butt" (click)="goTo('/admin')">Admin panel</button>
+    <button *ngIf="admin" mat-raised-button class="edit-butt" (click)="goTo('/file-list')">Back to home</button>
+
     <button *ngIf="!profil" mat-raised-button class="edit-butt" (click)="goTo('/profil')">Edit Profil</button>
     <button *ngIf="profil" mat-raised-button class="edit-butt" (click)="goTo('/file-list')">Back to home</button>
 </div>
