--- a/Front/src/app/body/add-file/add-file.component.html
+++ b/Front/src/app/body/add-file/add-file.component.html
@@ -1,1 +1,12 @@
-<p>add-file works!</p>
+<div class="file-comp">
+    <h1>Upload File</h1>
+    <h2>PDF, JPEG, Docx and PNG <b>ONLY!</b></h2>
+    <ngx-file-drop [useDragEnter]="false" dropZoneClassName="empty" class="drop-ngx" accept=".pdf, .jpeg, .docx, .png" [multiple]="false" (onFileDrop)="dropped($event)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+        <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+            <div class="center drop-zone">
+                <h1>Drag And Drop</h1>
+                <button type="button" mat-raised-button (click)="openFileSelector()">From my computer</button>
+            </div>
+        </ng-template>
+    </ngx-file-drop>
+</div>
