--- a/Front/src/app/body/admin-panel/admin-panel.component.html
+++ b/Front/src/app/body/admin-panel/admin-panel.component.html
@@ -4,15 +4,20 @@
     <div style="width: 100%;height: 80%;">
         <h2>Users</h2>
 
-        <mat-list class="list">
+        <div style="display: flex; justify-content: center; align-items: center">
+            <mat-spinner *ngIf="isLoading" diameter="60">
+            </mat-spinner>
+        </div>
+
+        <mat-list class="list" *ngIf="!isLoading">
             <ng-container *ngFor="let item of list; let i = index">
                 <mat-divider *ngIf="i !== 0"></mat-divider>
                 <mat-list-item>
                     <div class="item">
-                        <span>Pepper</span>
+                        <span>{{item.username}}</span>
                         <div class="tool">
-                            <mat-checkbox matTooltip="Unadmin or Admin the user"></mat-checkbox>
-                            <button mat-icon-button matTooltip="Ban the user" aria-label="Delete"><mat-icon>clear</mat-icon></button>
+                            <mat-checkbox style="margin-right: 10px" [disabled]="isLoadingLittle" [(ngModel)]="item.account.is_admin" (change)="admin($event, item._id.$oid, item)" matTooltip="Unadmin or Admin the user">Admin</mat-checkbox>
+                            <mat-checkbox [(ngModel)]="item.account.is_banned" [disabled]="isLoadingLittle" (change)="ban($event, item._id.$oid, item)" matTooltip="Unban or Ban the user">Ban</mat-checkbox>
                         </div>
                     </div>
                 </mat-list-item>
