--- a/Front/src/app/body/file-list/file-list.component.html
+++ b/Front/src/app/body/file-list/file-list.component.html
@@ -1,12 +1,17 @@
 <div class="file-comp">
-    <h1>{{'Welcome Back' + ' username'}}</h1>
+    <h1>{{'Welcome Back ' + auth.currentUserValue.username}}</h1>
 
     <button class="up-butt" mat-raised-button (click)="goTo('/add-file')">Upload something</button>
 
     <div style="width: 100%;height: 80%;">
         <h2>Your files</h2>
 
-        <mat-list class="list">
+        <div style="display: flex; justify-content: center; align-items: center">
+            <mat-spinner *ngIf="isLoading" diameter="60">
+            </mat-spinner>
+        </div>
+
+        <mat-list class="list" *ngIf="!isLoading">
             <ng-container *ngFor="let item of list; let i = index">
                 <mat-divider *ngIf="i !== 0"></mat-divider>
                 <mat-list-item>
