--- a/Front/src/app/body/profile/profile.component.scss
+++ b/Front/src/app/body/profile/profile.component.scss
@@ -1,5 +1,5 @@
 .file-comp {
-    width: 35vw;
+    width: 40vw;
     height: 70vh;
     display: flex;
     flex-direction: column;
@@ -24,4 +24,22 @@
     margin-top: 0.75em;
     background-color: red;
     color: var(--text_color);
+}
+
+.field {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.form {
+    width: 100%;
+}
+
+.change {
+    margin-left: 15px;
+    width: 100px;
 }
