--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -2,33 +2,20 @@
 // For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat.core();
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $front-primary: mat.define-palette(mat.$indigo-palette);
 $front-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
 // The warn palette is optional (defaults to red).
 $front-warn: mat.define-palette(mat.$red-palette);
-
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$front-theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $front-primary,
-      accent: $front-accent,
-      warn: $front-warn,
-    ),
-  )
-);
-
+$front-theme: mat.define-light-theme( ( color: ( primary: $front-primary, accent: $front-accent, warn: $front-warn, ), ));
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -121,7 +108,9 @@ input:-webkit-autofill {
     font-size: 40px!important;
 }
 
-.mat-button-disabled {
+.mat-button-disabled,
+.mat-checkbox-disabled .mat-checkbox-label,
+.mat-checkbox-disabled {
     color: var(--text_color_sec)!important;
     cursor: not-allowed!important;
 }
