--- a/Front/src/app/body/file-list/file-list.component.html
+++ b/Front/src/app/body/file-list/file-list.component.html
@@ -18,7 +18,7 @@
                     <div class="item">
                         <span>Pepper</span>
                         <div>
-                            <button mat-icon-button matTooltip="Share the url of the file" aria-label="Share" (click)="openSnackBar('test')"><mat-icon>send</mat-icon></button>
+                            <button mat-icon-button matTooltip="Share the url of the file" aria-label="Share" (click)="openSnackBar(item._id.$oid)"><mat-icon>send</mat-icon></button>
                             <button mat-icon-button matTooltip="Delete the file" aria-label="Delete"><mat-icon>clear</mat-icon></button>
                         </div>
                     </div>
