--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -108,6 +108,12 @@ input:-webkit-autofill {
     font-size: 40px!important;
 }
 
+.configGood {
+    color: whitesmoke;
+    background-color: green;
+    font-size: 40px!important;
+}
+
 .mat-button-disabled,
 .mat-checkbox-disabled .mat-checkbox-label,
 .mat-checkbox-disabled {
